--- a/src/OutputCacheProvider_net462/RedisOutputCacheProvider_net462.csproj
+++ b/src/OutputCacheProvider_net462/RedisOutputCacheProvider_net462.csproj
@@ -41,6 +41,9 @@
       <HintPath>..\..\packages\Microsoft.AspNet.OutputCache.OutputCacheModuleAsync.1.0.1\lib\Net462\Microsoft.AspNet.OutputCache.OutputCacheModuleAsync.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NLog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="Pipelines.Sockets.Unofficial, Version=1.0.0.0, Culture=neutral, PublicKeyToken=42ea0a778e13fbe2, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Pipelines.Sockets.Unofficial.1.0.7\lib\net461\Pipelines.Sockets.Unofficial.dll</HintPath>
       <Private>True</Private>
