--- a/src/RedisSessionStateProvider_net462/packages.config
+++ b/src/RedisSessionStateProvider_net462/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.SessionState.SessionStateModule" version="1.1.0" targetFramework="net462" />
+  <package id="NLog" version="2.0.0.2000" targetFramework="net462" />
   <package id="Pipelines.Sockets.Unofficial" version="1.0.7" targetFramework="net462" />
   <package id="StackExchange.Redis" version="2.0.519" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
